src/css/styles.css
:root {
    --quoteWidth: 20rem;
    --text-green: #85ffbd;
}

body {
    max-width: 90%;
    min-height: 100vh;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

section {
    display: grid;
    grid-template-columns: repeat(auto-fill, var(--quoteWidth));
    column-gap: 1rem;
    justify-content: center;
}

header>div,
form {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
}

blockquote>div.desc>*,
blockquote>div>button {
    height: max-content;
    margin-bottom: 0px;
}

blockquote>div>button {
    margin-left: 1rem;
    margin-right: -0.5rem;
}

form>* {
    margin-left: 0.5rem;
    margin-top: auto;
    margin-bottom: auto;
}

footer {
    margin-top: auto;
    margin-bottom: 1rem;
}

h1,
h4,
hr {
    margin-bottom: 1rem;
}

h4,
hr {
    margin-top: 1rem;
}

blockquote {
    display: flex;
    width: var(--quoteWidth);
    padding-right: 1rem;
    flex-direction: column;
    justify-content: space-between;
    background-color: var(--b-bg-2);
    border-radius: 0px 0px 1.5rem 0px;
}

blockquote>div {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

div.desc>cite {
    color: var(--b-focus);
}

div.desc>p {
    color: var(--text-green);
}

label {
    display: none;
}

